fix align button and change logic years experience

--- a/src/pages/contact/index.css
+++ b/src/pages/contact/index.css
@@ -117,7 +117,7 @@ span#v-contact-card-item-title {
 span#v-contact-card-item-value {
   font-family: "Poppins";
   font-size: 11px;
-  font-weight: 400;
+  font-weight: 500;
   color: #ff9900;
 }
 
@@ -225,7 +225,7 @@ div#v-contact-form-email {
 
 input#v-contact-form-email-input {
   position: relative;
-  width: 97%;
+  width: 100%;
   height: 100%;
   margin: 0 auto;
   background-color: #202020;
@@ -253,7 +253,7 @@ div#v-contact-form-message {
 
 textarea#v-contact-form-message-input {
   position: relative;
-  width: 97%;
+  width: 100%;
   height: 100%;
   margin: 0 auto;
   background-color: #202020;
@@ -291,7 +291,6 @@ div#v-contact-form-button-button {
   text-align: center;
   cursor: pointer;
   transition: background-color 500ms;
-  margin-left: 3px;
 }
 
 span#v-contact-form-button-button-text {
@@ -465,7 +464,7 @@ span#contact-card-item-title {
 span#contact-card-item-value {
   font-family: "Poppins";
   font-size: 11px;
-  font-weight: 400;
+  font-weight: 500;
   color: #ff9900;
 }
 
@@ -545,7 +544,7 @@ div#contact-form-name {
 
 input#contact-form-name-input {
   position: relative;
-  width: 97%;
+  width: 100%;
   height: 100%;
   margin: 0 auto;
   background-color: #202020;
@@ -577,7 +576,7 @@ div#contact-form-email {
 
 input#contact-form-email-input {
   position: relative;
-  width: 97%;
+  width: 100%;
   height: 100%;
   margin: 0 auto;
   background-color: #202020;
@@ -605,7 +604,7 @@ div#contact-form-message {
 
 textarea#contact-form-message-input {
   position: relative;
-  width: 97%;
+  width: 100%;
   height: 100%;
   margin: 0 auto;
   background-color: #202020;
@@ -643,7 +642,6 @@ div#contact-form-button-button {
   text-align: center;
   cursor: pointer;
   transition: background-color 500ms;
-  margin-left: 3px;
 }
 
 span#contact-form-button-button-text {
